[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jamie Place", email = "jamieplace95@gmail.com" }
]
dependencies = [
    "textual>=0.50.1",
    "textual-dev>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
